# MadHacks2024

./: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backend/: .gitignore  Cargo.toml  server.py
backend/src/: main.rs
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  lib.ts  stores.ts
frontend/src/routes/game/: +page.svelte
frontend/src/routes/game/waiting/: +page.svelte
src/: app.html  decs.d.ts
src/routes/: +page.svelte
static/: GazeCloudAPI.js  webgazer.js  webgazer.js.map
