[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
